--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "body-parser": "^1.20.0",
     "chai-http": "^4.3.0",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "pg": "^8.8.0",
+    "postgres-migrations": "^5.3.0"
   },
   "devDependencies": {
     "chai": "^4.3.6",
