--- a/package.json
+++ b/package.json
@@ -10,10 +10,15 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.0",
+    "bootstrap": "^5.2.2",
     "chai-http": "^4.3.0",
     "express": "^4.18.1",
+    "nodemon": "^2.0.20",
     "pg": "^8.8.0",
-    "postgres-migrations": "^5.3.0"
+    "postgres-migrations": "^5.3.0",
+    "react-bootstrap": "^2.5.0",
+    "react-query": "^3.39.2",
+    "react-router-dom": "^6.4.2"
   },
   "devDependencies": {
     "chai": "^4.3.6",
