--- a/react-app/package.json
+++ b/react-app/package.json
@@ -18,6 +18,7 @@
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.4.1",
     "react-scripts": "^5.0.1",
+    "sessions": "^0.0.2-7",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
