Move user search code over to react-client
consolidated the code into a single client.

--- a/react-app/package.json
+++ b/react-app/package.json
@@ -11,6 +11,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.1.2",
     "formik": "^2.2.9",
     "framer-motion": "^7.5.2",
     "react": "^18.2.0",
@@ -18,6 +19,7 @@
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.4.1",
     "react-scripts": "^5.0.1",
+    "react-select": "^5.4.0",
     "sessions": "^0.0.2-7",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
