hello world test case

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,6 +6,16 @@ version: 2.1
 orbs:
   node: circleci/node@4.7
 
+jobs:
+  say-hello:
+    docker:
+      - image: cimg/base:stable
+    steps:
+      - checkout
+      - run: 
+          name: "say hello"
+          command: "echo Hello, world!"
+
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
@@ -19,3 +29,4 @@ workflows:
           version: '16.10'
           # If you are using yarn, change the line below from "npm" to "yarn"
           pkg-manager: npm
+      - say-hello
