--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,10 +21,10 @@ jobs:
     steps:
       - checkout
       - node/install-packages:
-          pkg-manager: "npm"
+          pkg-manager: npm
       - run: 
           name: "Run tests"
-          command: run npm test
+          command: npm test
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
