--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,7 +24,9 @@ jobs:
           pkg-manager: npm
       - run: 
           name: "Run tests"
-          command: npm test
+          command: |
+            npm install
+            npm test
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
