--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,7 @@ jobs:
     steps:
       - checkout
       - node/install:
-          install-npm: true
+          install-yarn: false
           node-version: '16.13'
       - node/install-packages:
           pkg-manager: npm
