--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,3 @@
-# This config is equivalent to both the '.circleci/extended/orb-free.yml' and the base '.circleci/config.yml'
 version: 2.1
 
 # Orbs are reusable packages of CircleCI configuration that you may share across projects, enabling you to create encapsulated, parameterized commands, jobs, and executors that can be used across multiple projects.
@@ -17,20 +16,33 @@ jobs:
           command: "echo Hello, world!"
   run-tests:
     docker:
-      - image: cimg/base:stable
+      - image: node:18
+    resource_class: large
+    parallelism: 10
     working_directory: ~/server/
     steps:
       - checkout
-      - node/install:
-          install-yarn: false
-          node-version: '16.13'
-      - node/install-packages:
-          pkg-manager: npm
-      - run: 
-          name: "Run tests"
+      - restore_cache:
+          name: Restore pnpm Package Cache
+          keys:
+            - pnpm-packages-{{ checksum "pnpm-lock.yaml" }}
+      - run:
+          name: Install pnpm package manager
           command: |
-            npm install
-            npm test
+            curl -L https://pnpm.js.org/pnpm.js | node - add --global pnpm@7
+      - run:
+          name: Install Dependencies
+          command: |
+            pnpm install
+      - run:
+          name: Run tests
+          command: |
+            pnpm test
+      - save_cache:
+          name: Save pnpm Package Cache
+          key: pnpm-packages-{{ checksum "pnpm-lock.yaml" }}
+          paths:
+            - node_modules
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
