--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "This GitHub repo contains the project and project artifacts for the Lab section of CSE 6214.",
   "main": "index.js",
   "scripts": {
-    "test": "mocha --file './test/**/*.test.js'"
+    "test": "mocha"
   },
   "keywords": [],
   "author": "",
