--- a/server/package.json
+++ b/server/package.json
@@ -2,9 +2,9 @@
   "name": "cse-media",
   "version": "1.0.0",
   "description": "This GitHub repo contains the project and project artifacts for the Lab section of CSE 6214.",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "test": "mocha ./test/*.test.js"
+    "test": "mocha"
   },
   "keywords": [],
   "author": "",
