--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,9 +19,14 @@ jobs:
       - image: node:18
     resource_class: large
     parallelism: 10
-    working_directory: ~/server/
     steps:
       - checkout
+      - run:
+          name: Change directory
+          command: |
+            ls
+            cd server
+            ls
       - restore_cache:
           name: Restore pnpm Package Cache
           keys:
@@ -29,6 +34,7 @@ jobs:
       - run:
           name: Install pnpm package manager
           command: |
+            ls
             curl -L https://pnpm.js.org/pnpm.js | node - add --global pnpm@7
       - run:
           name: Install Dependencies
@@ -37,7 +43,6 @@ jobs:
       - run:
           name: Run tests
           command: |
-            cd server
             pnpm test
       - save_cache:
           name: Save pnpm Package Cache
