--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,6 +4,7 @@ version: 2.1
 # See: https://circleci.com/docs/2.0/orb-intro/
 orbs:
   node: circleci/node@5.0.3
+  dockerize: ganta/dockerize@1.3.2
 
 jobs:
   say-hello:
@@ -29,6 +30,9 @@ jobs:
     parallelism: 10
     steps:
       - checkout
+      - run:
+          name: Wait for Postgres
+          command: dockerize -wait tcp://localhost:5432 -timeout 1m
       - restore_cache:
           name: Restore pnpm Package Cache
           keys:
