--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.0",
     "bootstrap": "^5.2.2",
+    "chai": "^4.3.6",
     "chai-http": "^4.3.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -20,6 +21,7 @@
     "express": "^4.18.1",
     "express-session": "^1.17.3",
     "helmet": "^6.0.0",
+    "mocha": "^10.0.0",
     "nodemon": "^2.0.20",
     "pg": "^8.8.0",
     "postgres-migrations": "^5.3.0",
@@ -29,8 +31,12 @@
     "session": "^0.1.0",
     "sessions": "^0.0.2-7",
     "socket.io": "^4.5.2",
-    "yup": "^0.32.11",
-    "chai": "^4.3.6",
-    "mocha": "^10.0.0"
+    "yup": "^0.32.11"
+  },
+  "devDependencies": {
+    "eslint": "^7.32.0 || ^8.2.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-detailed-reporter": "^0.9.0",
+    "eslint-plugin-import": "^2.25.2"
   }
 }
