--- a/react-app/.eslintrc.json
+++ b/react-app/.eslintrc.json
@@ -1,10 +1,12 @@
 {
     "env": {
         "browser": true,
-        "commonjs": true,
         "es2021": true
     },
-    "extends": "airbnb-base",
+    "extends": [
+        "plugin:react/recommended",
+        "airbnb"
+    ],
     "overrides": [
         {
             "files": ["*"],
@@ -14,10 +16,16 @@
         }
     ],
     "parserOptions": {
-        "ecmaVersion": "latest"
+        "ecmaVersion": "latest",
+        "sourceType": "module"
     },
+    "plugins": [
+        "react"
+    ],
     "rules": {
         "indent": ["error", 4],
+        "react/jsx-indent" : ["error", 4],
+        "react/jsx-indent-props": ["error", 4],
         "quotes": ["error", "double"],
         "semi": ["error", "never"]
     }
