--- a/react-app/.eslintrc.json
+++ b/react-app/.eslintrc.json
@@ -11,7 +11,8 @@
         {
             "files": ["*"],
             "rules": {
-                "no-tabs": "off"
+                "no-tabs": "off",
+                "react/prop-types": "off"
             }
         }
     ],
