--- a/server/.eslintrc.json
+++ b/server/.eslintrc.json
@@ -9,7 +9,8 @@
         {
             "files": ["migrations/*", "routes/*", "src/*", "app.js", "setup.js"],
             "rules": {
-                "no-tabs": "off"
+                "no-tabs": "off",
+                "no-undef": "off"
             }
         }
     ],
